--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="maincontainer">
   <div class="header">
-    <app-header></app-header>
+    <app-header (toggleSidebarEvent)="sidebarToggler($event)"></app-header>
   </div>
   <div class="content">
     <mat-drawer-container class="sidenav-container" autosize>
-      <mat-drawer #drawer class="sidenav" mode="side" opened>
+      <mat-drawer #drawer class="sidenav" mode="side" [opened]="sidebarOpen">
         <app-sidebar></app-sidebar>
       </mat-drawer>
       <div class="sidenav-content">
