--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,4 +1,12 @@
-<button mat-button [routerLink]="['dashboard']" routerLinkActive="activeRoute">Dashboard</button>
+<button mat-button [routerLink]="['dashboard']" routerLinkActive="activeRoute">
+  Dashboard
+</button>
 <mat-divider></mat-divider>
-<button mat-button [routerLink]="['employeeslist']" routerLinkActive="activeRoute">Employees</button>
+<button
+  mat-button
+  [routerLink]="['employeeslist']"
+  routerLinkActive="activeRoute"
+>
+  Employees
+</button>
 <mat-divider></mat-divider>
