--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,7 +1,7 @@
-*{
-    width: 100%;
+* {
+  width: 100%;
 }
 
 .activeRoute {
-    background-color: lightsteelblue;
+  background-color: darkgrey;
 }
