--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="maincontainer">
+<div class="maincontainer" [class]="MyThemeClass">
   <div class="header">
     <app-header (toggleSidebarEvent)="sidebarToggler($event)"></app-header>
   </div>
