--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,53 +1,30 @@
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
 @import "~@angular/material/theming";
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat-core();
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
-$GangaEmployeeMaintenance-primary: mat-palette($mat-indigo);
-$GangaEmployeeMaintenance-accent: mat-palette($mat-pink, A200, A100, A400);
-// The warn palette is optional (defaults to red).
-$GangaEmployeeMaintenance-warn: mat-palette($mat-red);
-
-// Define an alternate dark theme.
-$GangaEmployeeMaintenance-dark-primary: mat-palette($mat-blue-grey);
-$GangaEmployeeMaintenance-dark-accent: mat-palette(
-  $mat-amber,
-  A200,
-  A100,
-  A400
-);
-$GangaEmployeeMaintenance-dark-warn: mat-palette($mat-deep-orange);
-$GangaEmployeeMaintenance-dark-theme: mat-dark-theme(
-  $GangaEmployeeMaintenance-dark-primary,
-  $GangaEmployeeMaintenance-dark-accent,
-  $GangaEmployeeMaintenance-dark-warn
+$GangaLight1-primary: mat-palette($mat-blue-gray, 700, 600, 900);
+$GangaLight1-accent: mat-palette($mat-cyan);
+$GangaLight1-warn: mat-palette($mat-red);
+$GangaLight1-theme: mat-light-theme(
+  $GangaLight1-primary,
+  $GangaLight1-accent,
+  $GangaLight1-warn
 );
 
-// Create the theme object (a Sass map containing all of the palettes).
-$GangaEmployeeMaintenance-theme: mat-light-theme(
-  $GangaEmployeeMaintenance-primary,
-  $GangaEmployeeMaintenance-accent,
-  $GangaEmployeeMaintenance-warn
+$GangaDark1-primary: mat-palette($mat-grey, 800, 600, 900);
+$GangaDark1-accent: mat-palette($mat-amber);
+$GangaDark1-warn: mat-palette($mat-deep-orange);
+$GangaDark1-theme: mat-dark-theme(
+  $GangaDark1-primary,
+  $GangaDark1-accent,
+  $GangaDark1-warn
 );
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
-@include angular-material-theme($GangaEmployeeMaintenance-theme);
-
-.GangaEmployeeMaintenance-dark-theme {
-  @include angular-material-theme($GangaEmployeeMaintenance-dark-theme);
+.GangaLightTheme1 {
+  @include angular-material-theme($GangaLight1-theme);
 }
-
-/* You can add global styles to this file, and also import other style files */
+.GangaDarkTheme1 {
+  @include angular-material-theme($GangaDark1-theme);
+}
 
 html,
 body {
@@ -61,11 +38,9 @@ body {
 ::-webkit-scrollbar {
   width: 7px;
 }
-
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
-
 ::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
