--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,6 @@
-<div class="footer">
-    Copyright: All rights reserved by Rahul Pol.
-</div>
+<mat-toolbar color="primary" class="footer">
+  Copyright: All rights reserved by Rahul Pol.
+</mat-toolbar>
+<!-- <div color="primary" class="footer">
+  Copyright: All rights reserved by Rahul Pol.
+</div> -->
