--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,6 +1,6 @@
 .footer {
+  height: 35px;
   padding: 10px;
-  background-color: #3f51b5;
-  color: white;
+  font-size: 0.9em;
   font-weight: 100;
 }
