--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,18 +1,27 @@
 <mat-toolbar color="primary" mat-elevation-z8>
-  <button mat-icon-button aria-label="Example icon-button with a menu" (click)="toggleSidebar()">
+  <button
+    mat-icon-button
+    aria-label="Example icon-button with a menu"
+    (click)="toggleSidebar()"
+  >
     <mat-icon>menu</mat-icon>
   </button>
   <img class="logo" src="assets/Ganga.svg" />
   <span class="appname">Employee Maintenance</span>
   <span class="spacer"></span>
-  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+  <button
+    mat-icon-button
+    [matMenuTriggerFor]="menu"
+    aria-label="Example icon-button with a menu"
+  >
     <mat-icon>color_lens</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
     <mat-nav-list mat-list-item>
       <h4 matSubheader>Light Themes</h4>
     </mat-nav-list>
-    <button mat-menu-item>
+    <button mat-raised-button color="primary">AV</button>
+    <button mat-menu-item (click)="ChangeTheme('GangaLightTheme1')">
       <mat-icon>color_lens</mat-icon>
       <span>Light Theme 1</span>
     </button>
@@ -24,7 +33,7 @@
     <mat-nav-list mat-list-item>
       <h4 matSubheader>Dark Themes</h4>
     </mat-nav-list>
-    <button mat-menu-item>
+    <button mat-menu-item (click)="ChangeTheme('GangaDarkTheme1')">
       <mat-icon>color_lens</mat-icon>
       <span>Dark Theme 1</span>
     </button>
