--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -11,7 +11,11 @@ mat-toolbar {
   .spacer {
     flex: 1 1 auto;
   }
-  .activeTheme {
-    background-color: rgba($color: #000000, $alpha: 0.1);
+}
+
+.activeTheme {
+  background-color: rgba($color: #000000, $alpha: 0.1);
+  mat-icon {
+    color: goldenrod;
   }
 }
