--- a/src/app/components/employeeslist/employeeslist.component.html
+++ b/src/app/components/employeeslist/employeeslist.component.html
@@ -1,16 +1,18 @@
-<p
-  *ngFor="
-    let employee of employees;
-    let i = index;
-    first as isFirst;
-    last as isLast;
-    odd as isOdd;
-    even as isEven
-  "
->
-  {{ i + 1 }} / {{ employees.length }} - Employee # {{ employee }}
-  <span *ngIf="isFirst">Frist</span>
-  <span *ngIf="isLast">Last</span>
-  <span *ngIf="isOdd">Odd</span>
-  <span *ngIf="isEven">Even</span>
-</p>
+<div class="container">
+  <p
+    *ngFor="
+      let employee of employees;
+      let i = index;
+      first as isFirst;
+      last as isLast;
+      odd as isOdd;
+      even as isEven
+    "
+  >
+    {{ i + 1 }} / {{ employees.length }} - Employee # {{ employee }}
+    <span *ngIf="isFirst">Frist</span>
+    <span *ngIf="isLast">Last</span>
+    <span *ngIf="isOdd">Odd</span>
+    <span *ngIf="isEven">Even</span>
+  </p>
+</div>
