--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,9 +10,9 @@
       <mat-drawer #drawer class="sidenav" mode="side" [opened]="sidebarOpen">
         <app-sidebar></app-sidebar>
       </mat-drawer>
-      <div class="sidenav-content">
+      <mat-drawer-content class="sidenav-content">
         <router-outlet></router-outlet>
-      </div>
+      </mat-drawer-content>
     </mat-drawer-container>
   </div>
   <div class="footer">
