--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,9 +1,15 @@
-<div class="container">
-  <div class="login">
-    <label for="email">Email<input name="email" type="text"/></label>
+<mat-card class="login-card">
+  <mat-card-header>
+    <mat-card-title><h1>LOGIN</h1></mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+    <label for="email">UserID / Email<input name="email" type="text"/></label>
     <label for="password">
       Password
       <input name="password" type="password" />
     </label>
-  </div>
-</div>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LOGIN</button>
+  </mat-card-actions>
+</mat-card>
