--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,51 +1,18 @@
 <mat-card class="login-card">
   <mat-card-header>
-    <mat-card-title><h1>LOGIN</h1></mat-card-title>
+    <mat-card-title>L O G I N</mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <form class="example-form">
-      <mat-form-field class="example-full-width">
-        <input
-          matInput
-          placeholder="State"
-          aria-label="State"
-          [matAutocomplete]="auto"
-          [formControl]="stateCtrl"
-        />
-        <mat-autocomplete #auto="matAutocomplete">
-          <mat-option
-            *ngFor="let state of filteredStates | async"
-            [value]="state.name"
-          >
-            <img
-              class="example-option-img"
-              aria-hidden
-              [src]="state.flag"
-              height="25"
-            />
-            <span>{{ state.name }}</span> |
-            <small>Population: {{ state.population }}</small>
-          </mat-option>
-        </mat-autocomplete>
+    <form class="login-form">
+      <mat-form-field class="full-width">
+        <input matInput placeholder="UserID / Email" />
       </mat-form-field>
-
-      <br />
-
-      <mat-slide-toggle
-        [checked]="stateCtrl.disabled"
-        (change)="stateCtrl.disabled ? stateCtrl.enable() : stateCtrl.disable()"
-      >
-        Disable Input?
-      </mat-slide-toggle>
+      <mat-form-field class="full-width">
+        <input matInput placeholder="Password" type="password" />
+      </mat-form-field>
     </form>
-
-    <label for="email">UserID / Email<input name="email" type="text"/></label>
-    <label for="password">
-      Password
-      <input name="password" type="password" />
-    </label>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LOGIN</button>
+    <button color="primary" mat-raised-button>LOGIN</button>
   </mat-card-actions>
 </mat-card>
