--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -8,25 +8,54 @@
 .login-card {
   width: 400px;
   height: 300px;
-  background-color: rgba($color: #000000, $alpha: 0.15);
+  border-radius: 20px;
+  background-color: rgba($color: #000000, $alpha: 0.08);
+  display: grid;
+  grid-template-rows: min-content auto min-content;
+
+  mat-card-header {
+    display: grid;
+    grid-template-rows: auto;
+    place-content: stretch stretch;
+    background-color: rgba($color: #000000, $alpha: 0.08);
+    margin: -16px;
+    padding: 15px;
+    border-radius: 20px 20px 0 0;
+
+    mat-card-title {
+      display: grid;
+      place-content: center center;
+      margin: 5px;
+      font-size: 1.6em;
+    }
+  }
+
+  mat-card-content {
+    display: grid;
+    grid-template-rows: auto;
+    place-content: stretch stretch;
+    padding-top: 50px;
+
+    .login-form {
+      font-size: 1.2em;
+      min-width: 150px;
+      max-width: 500px;
+      width: 100%;
+    }
+  }
+
+  mat-card-actions {
+    display: grid;
+    grid-template-rows: auto;
+    place-content: stretch stretch;
+    padding: 5px;
+    height: 50px;
+    button {
+      border-radius: 13px;
+    }
+  }
 }
 
-.example-form {
-  min-width: 150px;
-  max-width: 500px;
+.full-width {
   width: 100%;
-}
-
-.example-full-width {
-  width: 100%;
-}
-
-.example-option-img {
-  vertical-align: middle;
-  margin-right: 8px;
-}
-
-[dir="rtl"] .example-option-img {
-  margin-right: 0;
-  margin-left: 8px;
 }
