--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,8 @@
 <mat-card class="login-card">
   <mat-card-header>
-    <mat-card-title>L O G I N</mat-card-title>
+    <mat-toolbar color="primary" class="loginicon mat-elevation-z8">
+      <mat-icon>vpn_key</mat-icon>
+    </mat-toolbar>
   </mat-card-header>
   <mat-card-content>
     <form class="login-form">
