--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -17,16 +17,24 @@
     display: grid;
     grid-template-rows: auto;
     place-content: stretch stretch;
-    background-color: rgba($color: #000000, $alpha: 0.08);
+    background-color: rgba($color: #000000, $alpha: 0.12);
     margin: -16px;
-    padding: 15px;
+    padding: 30px;
     border-radius: 20px 20px 0 0;
 
-    mat-card-title {
+    .loginicon {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
       display: grid;
-      place-content: center center;
-      margin: 5px;
-      font-size: 1.6em;
+      place-self: center center;
+      margin: -100px;
+      padding: 10px;
+      mat-icon {
+        border-radius: 50%;
+        display: grid;
+        place-self: center center;
+      }
     }
   }
 
@@ -34,7 +42,7 @@
     display: grid;
     grid-template-rows: auto;
     place-content: stretch stretch;
-    padding-top: 50px;
+    padding-top: 70px;
 
     .login-form {
       font-size: 1.2em;
