--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,9 +1,13 @@
 * {
-  width: 100%;
+  width: 210px;
 }
 
-mat-list-item {
-  border-radius: 0 30px 30px 0;
+mat-nav-list {
+  mat-list-item {
+    border-radius: 0 30px 30px 0;
+    button {
+    }
+  }
 }
 
 .activeRoute {
