--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<mat-card class="login-card">
+<mat-card class="login-card mat-elevation-z5">
   <mat-card-header>
     <mat-toolbar color="primary" class="loginicon mat-elevation-z8">
       <mat-icon>vpn_key</mat-icon>
