--- a/src/app/components/employeeslist/employeeslist.component.scss
+++ b/src/app/components/employeeslist/employeeslist.component.scss
@@ -26,30 +26,18 @@
     .tablecontent {
       height: 100%;
       display: grid;
-      grid-template-rows: auto;
       overflow-y: auto;
       background-color: rgba($color: #000000, $alpha: 0.05);
 
       table {
-        width: 100%;
         td,
         th {
-          padding: 0px;
-          // width: 25%;
-        }
-        .mat-header-row {
-          // background-color: rgba($color: #224446, $alpha: 0.15);
+          padding: 0 10px 0 10px;
         }
         .mat-row:nth-child(even) {
           background-color: rgba($color: #000000, $alpha: 0.08);
         }
-        .headerdecor {
-          width: 100%;
-        }
       }
-    }
-    mat-paginator {
-      // position: relative;
     }
   }
 }
