--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -5,14 +5,12 @@
 mat-nav-list {
   mat-list-item {
     border-radius: 0 30px 30px 0;
-    button {
-    }
   }
 }
 
 .activeRoute {
   background-color: rgba($color: #000000, $alpha: 0.15);
   button {
-    font-size: 1.1em;
+    // font-size: 1.1em;
   }
 }
