--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,10 +91,11 @@ body {
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
-::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
-}
+// ::-webkit-scrollbar-track {
+//   -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+// }
 ::-webkit-scrollbar-thumb {
   background-color: darkgrey;
   outline: 1px solid slategrey;
