--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -7,7 +7,7 @@
 
 .login-card {
   width: 400px;
-  height: 300px;
+  // height: 300px;
   border-radius: 20px;
   background-color: rgba($color: #000000, $alpha: 0.08);
   display: grid;
@@ -54,12 +54,15 @@
 
   mat-card-actions {
     display: grid;
-    grid-template-rows: auto;
-    place-content: stretch stretch;
+    grid-template-rows: auto auto;
+    row-gap: 10px;
+    // place-content: stretch stretch;
     padding: 5px;
-    height: 50px;
+    // height: 50px;
     button {
       border-radius: 13px;
+      height: 50px;
+      font-size: 1.2em;
     }
   }
 }
