--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,9 +15,9 @@
             registermode ? "Email" : "Enter your registered Email"
           }}</mat-label>
           <input matInput placeholder="abcd@efg.com" formControlName="email" />
-          <button mat-icon-button matSuffix [autofocus]="false">
+          <!-- <button mat-icon-button matSuffix>
             <mat-icon>email</mat-icon>
-          </button>
+          </button> -->
           <mat-error *ngIf="loginForm.controls.email.invalid">{{
             getEmailErrorMessage()
           }}</mat-error>
@@ -32,9 +32,9 @@
             [type]="hide ? 'password' : 'text'"
             formControlName="password"
           />
-          <button mat-icon-button matSuffix (click)="hide = !hide">
+          <!-- <button mat-icon-button matSuffix (click)="hide = !hide">
             <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
-          </button>
+          </button> -->
           <mat-error *ngIf="loginForm.controls.password.invalid">{{
             getPasswordErrorMessage()
           }}</mat-error>
@@ -48,9 +48,9 @@
             type="password"
             formControlName="confpassword"
           />
-          <button mat-icon-button matSuffix>
+          <!-- <button mat-icon-button matSuffix>
             <mat-icon>visibility_off</mat-icon>
-          </button>
+          </button> -->
           <mat-error *ngIf="loginForm.controls.confpassword.invalid">{{
             getConfPasswordErrorMessage()
           }}</mat-error>
