--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -54,6 +54,7 @@
         display: grid;
         grid-template-rows: auto;
         row-gap: 10px;
+        padding-top: 20px;
         button {
           border-radius: 13px;
           height: 50px;
