--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,12 +12,15 @@
         <!-- Email Field -->
         <mat-form-field class="full-width">
           <mat-label>{{
-            registermode ? "Email" : "Enter your registered Email"
+            registermode ? "Email" : "Registered Email"
           }}</mat-label>
-          <input matInput placeholder="abcd@efg.com" formControlName="email" />
-          <!-- <button mat-icon-button matSuffix>
-            <mat-icon>email</mat-icon>
-          </button> -->
+          <input
+            id="email"
+            matInput
+            placeholder="example@email.com"
+            formControlName="email"
+          />
+          <mat-icon matSuffix>email</mat-icon>
           <mat-error *ngIf="loginForm.controls.email.invalid">{{
             getEmailErrorMessage()
           }}</mat-error>
@@ -25,20 +28,31 @@
 
         <!-- Password Field -->
         <mat-form-field class="full-width">
-          <mat-label>Enter your Password</mat-label>
+          <mat-label>Password</mat-label>
           <input
             matInput
-            placeholder="Password 8 to 20 character long"
+            placeholder="Password"
             [type]="hide ? 'password' : 'text'"
             formControlName="password"
+            maxlength="15"
           />
-          <!-- <button mat-icon-button matSuffix (click)="hide = !hide">
-            <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
-          </button> -->
-          <mat-error *ngIf="loginForm.controls.password.invalid">{{
-            getPasswordErrorMessage()
-          }}</mat-error>
+          <mat-icon matSuffix (click)="hide = !hide">{{
+            hide ? "visibility_off" : "visibility"
+          }}</mat-icon>
+          <mat-hint align="end" aria-live="polite">
+            {{ loginForm.controls.password.value.length }} / 15
+          </mat-hint>
+          <mat-error
+            *ngIf="loginForm.controls.password.invalid && !registermode"
+            >{{ getPasswordErrorMessage() }}</mat-error
+          >
         </mat-form-field>
+
+        <!-- Password Strength Meter -->
+        <app-passwordstrengthindicator
+          *ngIf="registermode"
+          [password]="loginForm.controls.password.value"
+        ></app-passwordstrengthindicator>
 
         <!-- Confirm Password Field -->
         <mat-form-field class="full-width" *ngIf="registermode">
@@ -48,9 +62,7 @@
             type="password"
             formControlName="confpassword"
           />
-          <!-- <button mat-icon-button matSuffix>
-            <mat-icon>visibility_off</mat-icon>
-          </button> -->
+          <mat-icon matSuffix>visibility_off</mat-icon>
           <mat-error *ngIf="loginForm.controls.confpassword.invalid">{{
             getConfPasswordErrorMessage()
           }}</mat-error>
