--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -60,16 +60,10 @@
         grid-template-rows: auto;
         row-gap: 10px;
         padding-top: 20px;
-        #LoginButton {
+        button {
           border-radius: 13px;
           height: 50px;
           font-size: 1.15em;
-        }
-        .secondarybuttons {
-          display: flex;
-          .spacer {
-            flex: 1 1 auto;
-          }
         }
       }
     }
