Login System in Place

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -39,7 +39,7 @@
   </mat-menu>
 
   <!-- User Icon -->
-  <button mat-icon-button>
-    <mat-icon>account_circle</mat-icon>
+  <button mat-icon-button *ngIf="isLoggedIn" (click)="Logout()">
+    <mat-icon>logout</mat-icon>
   </button>
 </mat-toolbar>
