--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -13,7 +13,7 @@
   <!-- Spacer -->
   <span class="spacer"></span>
 
-  <!-- MenuButton -->
+  <!-- Theming MenuButton -->
   <button
     mat-icon-button
     [matMenuTriggerFor]="menu"
@@ -22,8 +22,8 @@
     <mat-icon>color_lens</mat-icon>
   </button>
 
-  <!-- Menu -->
-  <mat-menu #menu="matMenu">
+  <!-- Theming Menu -->
+  <mat-menu class="theming" #menu="matMenu">
     <mat-nav-list mat-list-item *ngFor="let theme of themes">
       <h4 matSubheader>{{ theme.ThemeGroup }}</h4>
       <button
@@ -38,8 +38,34 @@
     </mat-nav-list>
   </mat-menu>
 
-  <!-- User Icon -->
-  <button mat-icon-button *ngIf="isLoggedIn" (click)="Logout()">
-    <mat-icon>logout</mat-icon>
+  <!-- User MenuButton -->
+  <button mat-icon-button [matMenuTriggerFor]="user" *ngIf="isLoggedIn">
+    <mat-icon>face</mat-icon>
   </button>
+
+  <!-- User Menu -->
+  <mat-menu class="userdetails" #user="matMenu">
+    <div class="userdetailcard">
+      <img
+        class="user-image"
+        src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+      />
+      <p class="user-name">{{ showDisplayName() }}</p>
+      <p class="user-email">{{ showEmail() }}</p>
+      <mat-divider></mat-divider>
+      <button mat-menu-item class="manageuser">
+        Manage your Account Details
+      </button>
+      <mat-divider></mat-divider>
+      <button
+        mat-raised-button
+        color="primary"
+        class="logout"
+        (click)="Logout()"
+      >
+        <mat-icon>logout</mat-icon>
+        L O G O U T
+      </button>
+    </div>
+  </mat-menu>
 </mat-toolbar>
