--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar color="primary">
   <!-- Menu Icon -->
-  <button mat-icon-button (click)="toggleSidebar()">
+  <button
+    mat-icon-button
+    (click)="toggleSidebar()"
+    matTooltip="Toggle Menu Drawer"
+  >
     <mat-icon>menu</mat-icon>
   </button>
 
@@ -18,6 +22,7 @@
     mat-icon-button
     [matMenuTriggerFor]="menu"
     aria-label="Example icon-button with a menu"
+    matTooltip="Select Theme"
   >
     <mat-icon>color_lens</mat-icon>
   </button>
@@ -39,7 +44,12 @@
   </mat-menu>
 
   <!-- User MenuButton -->
-  <button mat-icon-button [matMenuTriggerFor]="user" *ngIf="isLoggedIn">
+  <button
+    mat-icon-button
+    [matMenuTriggerFor]="user"
+    *ngIf="isLoggedIn"
+    matTooltip="User Details"
+  >
     <mat-icon>face</mat-icon>
   </button>
 
