--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary" class="footer">
+<!-- <mat-toolbar color="primary" class="footer">
   Copyright: All rights reserved by Rahul Pol.
-</mat-toolbar>
+</mat-toolbar> -->
