--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,3 +101,8 @@ body {
   background-color: darkgrey;
   outline: 1px solid slategrey;
 }
+
+.mat-simple-snackbar span {
+  margin: auto;
+  text-align: center;
+}
