--- a/src/app/components/passwordstrengthindicator/passwordstrengthindicator.component.scss
+++ b/src/app/components/passwordstrengthindicator/passwordstrengthindicator.component.scss
@@ -26,7 +26,7 @@
 
   .feedbackcontainer {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: auto auto;
     grid-template-rows: min-content min-content min-content;
     column-gap: 10px;
     row-gap: 5px;
