--- a/src/app/components/editprofile/editprofile.component.scss
+++ b/src/app/components/editprofile/editprofile.component.scss
@@ -13,7 +13,7 @@
 
   .header {
     display: grid;
-    grid-template-columns: max-content auto;
+    grid-template-columns: min-content auto min-content;
     place-items: center start;
     column-gap: 20px;
     background-color: rgba($color: #000000, $alpha: 0.12);
@@ -33,6 +33,9 @@
       .user-email {
         font-size: 0.9em;
       }
+    }
+    .verification {
+      font-size: 0.8em;
     }
   }
   .content {
