--- a/src/app/shared/dialogs/fileselectdialog/fileselectdialog.component.scss
+++ b/src/app/shared/dialogs/fileselectdialog/fileselectdialog.component.scss
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  height: 300px;
+  height: 350px;
   border: 1px dashed #f16624;
   border-radius: 5px;
   background: white;
@@ -14,8 +14,18 @@
     color: #8addbd !important;
   }
 
-  .file-label {
-    font-size: 1.2em;
+  .filecontrols {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+
+  img {
+    width: auto;
+    height: auto;
+    max-width: 400px;
+    max-height: 300px;
   }
 }
 
