--- a/src/app/shared/dialogs/fileselectdialog/fileselectdialog.component.html
+++ b/src/app/shared/dialogs/fileselectdialog/fileselectdialog.component.html
@@ -5,7 +5,7 @@
   (dropped)="onDrop($event)"
   [class.hovering]="isHovering"
 >
-  <div class="filecontrols" *ngIf="!imgURL">
+  <div class="filecontrols" *ngIf="!hasImage">
     <p>Drag and Drop a File</p>
     <p>--- or ---</p>
     <p>
@@ -23,11 +23,30 @@
         #file
         type="file"
         accept="image/*"
-        (change)="preview(file.files)"
+        (change)="fileChangeEvent($event)"
       />
     </p>
   </div>
-  <img [src]="imgURL" height="300" *ngIf="imgURL" />
+  <div class="imagecropper">
+    <image-cropper
+      [imageChangedEvent]="imageChangedEvent"
+      [imageBase64]="droppedImage"
+      [maintainAspectRatio]="true"
+      [containWithinAspectRatio]="containWithinAspectRatio"
+      [aspectRatio]="1 / 1"
+      [resizeToWidth]="200"
+      [cropperMinWidth]="128"
+      [onlyScaleDown]="true"
+      [roundCropper]="false"
+      [canvasRotation]="canvasRotation"
+      [transform]="transform"
+      [alignImage]="'center'"
+      [style.display]="showCropper ? null : 'none'"
+      format="png"
+      (imageCropped)="imageCropped($event)"
+      (imageLoaded)="imageLoaded()"
+    ></image-cropper>
+  </div>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
