--- a/src/app/shared/dialogs/fileselectdialog/fileselectdialog.component.scss
+++ b/src/app/shared/dialogs/fileselectdialog/fileselectdialog.component.scss
@@ -8,8 +8,9 @@
   border: 1px dashed #f16624;
   border-radius: 5px;
   background: rgba($color: #000000, $alpha: 0.06);
-  margin: 5px 0;
+  // margin: 5px 0;
   padding: 10px 20px 10px 10px;
+  overflow: scroll;
 
   &.hovering {
     border: 1px solid #f16624;
@@ -21,18 +22,17 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-
-    .imagecropper {
-      image-cropper {
-        width: 200px;
-      }
-    }
   }
 
-  img {
-    width: auto;
-    height: auto;
-    max-width: 400px;
-    max-height: 300px;
+  .imagecropper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    max-height: 590px;
+    image-cropper {
+      padding: 0;
+      margin: 0;
+    }
   }
 }
