--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,11 @@
       <mat-sidenav #sidenav class="sidenav" mode="side" [opened]="sidebarOpen">
         <app-sidebar></app-sidebar>
       </mat-sidenav>
-      <mat-sidenav-content class="sidenav-content">
-        <router-outlet></router-outlet>
+      <mat-sidenav-content
+        class="sidenav-content"
+        [@routeAnimations]="prepareRoute(outlet)"
+      >
+        <router-outlet #outlet="outlet"></router-outlet>
       </mat-sidenav-content>
     </mat-sidenav-container>
   </div>
