--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -11,6 +11,10 @@
   background-color: rgba($color: #000000, $alpha: 0.08);
   display: grid;
   grid-template-rows: min-content auto min-content;
+  // animation-name: bounceInRight;
+  // animation-duration: 1s;
+  // animation-delay: 0s;
+  // animation-iteration-count: initial;
 
   mat-card-header {
     display: grid;
@@ -33,6 +37,10 @@
         border-radius: 50%;
         display: grid;
         place-self: center center;
+        animation-name: heartBeat;
+        animation-duration: 1s;
+        animation-delay: 0s;
+        animation-iteration-count: infinite;
       }
     }
   }
